[package]
name = "ticx"
description = "A command-line HTTP server that is easy to use and configure."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
actix-web = "4.0.1"
actix-files = "0.6.0"
